--- a/index.html
+++ b/index.html
@@ -5,30 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
+  <link rel="stylesheet" href="css/styles.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Inter font link -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+  <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <section class="container">
+    <img class="img-1" src="assets/images/avatar-jessica.jpeg" alt="a young black woman">
+    <h1 class="name">Francisco Esteves</h1>
+    <h2 class="location">Setúbal, Portugal</h2>
+    <p class="description">"Front-end developer and avid reader."</p>
+    <ul>
+      <li>GitHub</li>
+      <li>Frontend Mentor</li>
+      <li>LinkedIn</li>
+      <li>Dribble</li>
+      <li>Youtube</li>
+    </ul>
+  </section>
 </body>
 </html>
+
