Edit styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h2 class="location">Setúbal, Portugal</h2>
     <p class="description">"Front-end developer and avid reader."</p>
     <ul>
-      <li>GitHub</li>
-      <li>Frontend Mentor</li>
+      <li><a href="https://github.com/antoniomontoia">GitHub</a></li>
+      <li><a href="https://www.frontendmentor.io/profile/antoniomontoia">Frontend Mentor</a></li>
       <li>LinkedIn</li>
-      <li>Dribble</li>
+      <li><a href="https://dribbble.com/franissimo">Dribbble</a></li>
       <li>Youtube</li>
     </ul>
   </section>
