--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
-  <section class="container">
+  <main class="container">
     <img class="img-1" src="assets/images/avatar-jessica.jpeg" alt="a young black woman">
     <h1 class="name">Francisco Esteves</h1>
     <h2 class="location">Setúbal, Portugal</h2>
@@ -26,7 +26,7 @@
       <li><a href="https://dribbble.com/franissimo">Dribbble</a></li>
       <li>Youtube</li>
     </ul>
-  </section>
+  </main>
 </body>
 </html>
 
